# PythonC

./: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  CPython.hpp  PythonC.hpp  a.py  clean.py  data.pb.cc  data.pb.h  data.proto  data_pb2.py  dbg_utili.hpp  getPyobj.hpp  getPyobj_full.py  main.cpp  main.py  main1.py  main2.py  main3.py  parseCtoProto.hpp  pb_spawn.cpp  setPyobj.hpp  setup.py
test/: CMakeLists.txt  error_nosuchkey.cpp  getPyobj_full.cpp  getPyobj_full.py  just_run.cpp  just_run.py  map_namespace.cpp  map_namespace1.py  map_namespace2.py  map_namespace3.py  map_namespace4.py  multithread.cpp  multithread.py  nosuchkey.cpp  nosuchkey.py  script_namespace.cpp  script_namespace.py  script_namespace1.py  script_namespace2.py  setPyobj_full.cpp  setPyobj_full.py  singlethread.cpp
